--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@apihero/integration-template",
-  "version": "1.0.0",
+  "name": "@apihero/github",
+  "version": "0.0.0",
   "exports": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "main": "./lib/index.js",
@@ -18,18 +18,19 @@
     "api",
     "apihero",
     "client",
-    "http"
+    "http",
+    "github"
   ],
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apihero-run/integration-template"
+    "url": "https://github.com/apihero-run/github"
   },
-  "homepage": "https://docs.apihero.run/integrations",
+  "homepage": "https://docs.apihero.run/integrations/github",
   "bugs": {
-    "url": "https://github.com/apihero-run/integration-template"
+    "url": "https://github.com/apihero-run/github"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
