--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "check-types": "tsc --noEmit",
     "build": "rollup -c",
     "prepublishOnly": "npm run clean && npm run check-types && npm run build"
+  },
+  "dependencies": {
+    "@apihero/core": "^1.0.0"
   }
 }
