--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apihero/github",
-  "version": "1.1.5-beta.0",
+  "version": "1.1.5",
   "exports": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "main": "./lib/index.js",
